# tinygrad

./: README.md  example.ipynb  pyproject.toml
tests/: test_engine.py  test_loss.py  test_nn.py  test_optimizer.py
tinygrad/: engine.py  loss_func.py  nn.py  optimizer.py
